Closed Bug 371856 Opened 18 years ago Closed 18 years ago

Camino 1.1 Command+# Bookmark Bar Shortcuts override Keyboard Shortcuts set in System Prefs

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.5

People

(Reporter: belthesar, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: fixed1.8.1.4)

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en; rv:1.8.1.2pre) Gecko/20070223 Camino/1.1b Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en; rv:1.8.1.2pre) Gecko/20070223 Camino/1.1b Camino 1.1's implementation of the Command+# allowing you to quickly access links in your Bookmark Bar does not allow Command+# Keyboard Mappings assigned in the Keyboard System Preferences pane to take precedence. Reproducible: Always Steps to Reproduce: 1. Assign a custom Keyboard Shortcut to a Command+# shortcut (IE: Previous tab to Command+1, Next Tab to Command+2) 2. Test Shortcut Actual Results: Bookmarks bar link for the shortcut pressed opened. Expected Results: Keyboard Shortcut to perform said setup shortcut. A suggestion to work around the issue is to put the shortcut capture inside of a menu within the Bookmarks bar instead of being captured by the window. This would (in theory) allow the Keyboard Shortcuts Prefpane to override it if a user wished it so, and advertise the function better than just having it in a Changelog.
Confirming. This is at least something we should look at.
Status: UNCONFIRMED → NEW
Ever confirmed: true
I wasn't sure if this would be fixable, but if we can we definitely should. I don't know if there's any way to find out if the there is a menu command assigned a given shortcut (short of scanning all the menus at startup, which might work if nothing else will).
I could have sworn we talked about this (in a bug, even) and decided it wasn't possible to fix it, but I might be remembering wrong. I'm gonna CC pink, though, 'cause I think he was in on the discussion.
I know the statement about wanting Camino to be lightweight and all of that, but would it be possible to make this option toggleable within the preferences? The feature is nice, but I could certainly do without it.
(In reply to comment #4) > would it be possible to make this option toggleable within the preferences? Theoretically yes, but if we did that every time someone could do without a given feature we'd have hundreds of hidden prefs, so we only do it when we really feel it's necessary.
Thanks for all the fast responses here. I've pretty much resolved that I will need to make the necessary code modifications and build Camino myself with the changes I wish it to have. However, since I haven't worked on the project, I don't know what part of the project I need to open. If anyone could send me an e-mail in regards to what section of code I should be looking through, or even an educated guess as to where I need to look (as I have yet to find it browsing through the XCode project file) I would certainly appreciate the help.
Attached patch fix (obsolete) — Splinter Review
For our compatibility shortcuts (numbers, D for add bookmark), give the menubar first crack at it in case someone has added the shortcut to a menu item, and then handle it only if the menubar didn't.
Assignee: nobody → stuart.morgan
Status: NEW → ASSIGNED
Attachment #257026 - Flags: review?
Keywords: regression
Target Milestone: --- → Camino1.1
Comment on attachment 257026 [details] [diff] [review] fix It seems to me that we should let the menu have first crack at Cmd-+ too. Also, this patch doesn't apply cleanly. r=me with those changes.
Attachment #257026 - Flags: review? → review+
Attached patch v2Splinter Review
Respun, and including Command-+
Attachment #257026 - Attachment is obsolete: true
Attachment #257686 - Flags: superreview?(mikepinkerton)
Attachment #257686 - Flags: superreview?(mikepinkerton) → superreview+
Checked in on trunk and MOZILLA_1_8_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: regressionfixed1.8.1.4
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: