Camino only - Bug 371856: Allow user-set menu shortcuts to beat our pseudo-menu shortcuts. r=stridey sr=pink